<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="Profile"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_pdf"
        android:icon="@drawable/ic_print_black_24dp"
        android:title="Profile"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_language_black_24dp"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <item
                android:id="@+id/local_khmer"
                android:title="@string/text_khmer" />

            <item
                android:id="@+id/local_english"
                android:title="@string/text_english" />

        </menu>
    </item>

</menu>