<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="104"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="Exit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_language_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <item
                android:id="@+id/local_khmer"
                android:title="@string/text_khmer" />
            <item
                android:id="@+id/local_english"
                android:title="@string/text_english" />
            <item
                android:id="@+id/local_lao"
                android:title="ປະເທດລາວ" />
            <item
                android:id="@+id/local_viet"
                android:title="Việt Nam" />
            <item
                android:id="@+id/local_thai"
                android:title="ไทย" />
            <item
                android:id="@+id/local_filipino"
                android:title="filipino" />
            <item
                android:id="@+id/local_indonesia"
                android:title="Indonesia" />
            <item
                android:id="@+id/local_malay"
                android:title="Malay" />
            <item
                android:id="@+id/local_russian"
                android:title="русский" />
            <item
                android:id="@+id/local_arabic"
                android:title="العربية" />
            <item
                android:id="@+id/local_hindi"
                android:title="हिंदी" />
            <item
                android:id="@+id/local_tamil"
                android:title="தமிழ்" />
            <item
                android:id="@+id/local_malayalam"
                android:title="മലയാളം" />
        </menu>
    </item>

    <item
        android:id="@+id/action_pdf"
        android:icon="@drawable/ic_print_black_24dp"
        android:orderInCategory="101"
        android:title="PDF"
        app:showAsAction="always">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <item
                android:id="@+id/logbook"
                android:title="Logbook" />

            <item
                android:id="@+id/grgmeeting"
                android:title="GRC Meeting" />

            <item
                android:id="@+id/snaglist"
                android:title="Snag List" />

            <item
                android:id="@+id/summary"
                android:title="Grievances Summary" />

        </menu>
    </item>

    <item
        android:id="@+id/action_location"
        android:orderInCategory="102"
        android:icon="@drawable/ic_location_on_black"
        android:title="Location"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="Profile"
        android:orderInCategory="103"
        app:showAsAction="always" />
</menu>